--- a/fly.toml
+++ b/fly.toml
@@ -3,6 +3,9 @@ app = "rage-sniper-repo-v2"
 kill_signal = "SIGINT"
 kill_timeout = 5
 
+[processes]
+  worker = "python main.py"
+
 [env]
   PYTHONUNBUFFERED = "1"
 
