--- a/fly.toml
+++ b/fly.toml
@@ -1,13 +1,23 @@
-app = "rage-sniper-repo-v2"
+# fly.toml app configuration file generated for rage-sniper-repo-v2 on 2025-07-14T14:29:55Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
-kill_signal = "SIGINT"
-kill_timeout = 5
+app = 'rage-sniper-repo-v2'
+primary_region = 'jnb'
 
-[processes]
-  worker = "python main.py"
+[build]
 
-[env]
-  PYTHONUNBUFFERED = "1"
+[http_service]
+  internal_port = 8080
+  force_https = true
+  auto_stop_machines = 'stop'
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
 
-[experimental]
-  auto_rollback = true
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 1024
